...
  }

  static const _styles = <EventType, EventTypeStyle>{
    EventType.communityDay: EventTypeStyle._(
      color: Color(0xFF43A047),
      icon: Icons.groups,
      label: 'Community Day',
    ),
    EventType.spotlightHour: EventTypeStyle._(
      color: Color(0xFFFFC107),
      icon: Icons.flashlight_on,
      label: 'Spotlight Hour',
    ),
    EventType.raidHour: EventTypeStyle._(
      color: Color(0xFFE53935),
      icon: Icons.local_fire_department,
      label: 'Raid Hour',
    ),
    EventType.raidDay: EventTypeStyle._(
      color: Color(0xFFD32F2F),
      icon: Icons.whatshot,
      label: 'Raid Day',
    ),
...
